--- a/hubspot-spring-api/pom.xml
+++ b/hubspot-spring-api/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>[4.0.0.RELEASE, )</version>
         </dependency>
     </dependencies>
 
