--- a/hubspot-api/pom.xml
+++ b/hubspot-api/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>hubspot</artifactId>
-        <groupId>com.etashkinov.hubspot</groupId>
-        <version>0.1.0</version>
+        <groupId>com.github.etashkinov</groupId>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
