--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.etashkinov</groupId>
     <artifactId>hubspot</artifactId>
     <packaging>pom</packaging>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
 
     <name>Hubspot Java API</name>
     <description>Java API wrapper on Hubspot API</description>
@@ -29,7 +27,7 @@
         <developerConnection>
             scm:git:ssh://git@github.com:etashkinov/hubspot.git
         </developerConnection>
-        <tag>HEAD</tag>
+        <tag>hubspot-0.1.0</tag>
     </scm>
     <developers>
         <developer>
