--- a/hubspot-api/pom.xml
+++ b/hubspot-api/pom.xml
@@ -17,6 +17,18 @@
             <artifactId>jackson-databind</artifactId>
             <version>[2.9.10,)</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
